Mock Viz Hit Testing in RenderWidgetHostInputEventRouterTest

RenderWidgetHostInputEventRouterTest has some heavy overrides of the classic hit testing path, to force what target is used when. With these the test never actually set sizes, or correct FrameSinkIds, on the views in use.

However in Viz RenderWidgetHostInputEventRouter::FindViewAtLocation uses a
completely different method for determining targets while in Viz Hit Testing
Mode.

This change updates the test to als provide mock hit testing data.

A test wrapper HostFrameSinkManagerTestApi was added to allow for the setting
of hit testing data while in unittests. Or in testing where Viz is not actually
initialized.

TEST=RenderWidgetHostInputEventRouterTest

Bug: 796605
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: I66c4322f70fdd8c5be07c3560110519153370cff
Reviewed-on: https://chromium-review.googlesource.com/1145773
Commit-Queue: Jonathan Ross <jonross@chromium.org>
Reviewed-by: Ria Jiang <riajiang@chromium.org>
Reviewed-by: Sadrul Chowdhury <sadrul@chromium.org>
Cr-Commit-Position: refs/heads/master@{#578723}